Added new file for "optional features".

--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -22,4 +22,5 @@
 @import url('components/one_menu.css');
 @import url('components/one_left-sidebar.css');
 @import url('components/one_tree-tabs.css');
+@import url('components/one_optional-features.css');
 @import url('components/one_tricks.css');
