--- a/chrome/components/one_left-sidebar.css
+++ b/chrome/components/one_left-sidebar.css
@@ -534,7 +534,8 @@ toolbarbutton[badge="0"] .toolbarbutton-badge { display: none !important; }
 /* Label Menu */
     
 :root:not([chromehidden~="toolbar"]):is([sizemode="maximized"]) #PanelUI-menu-button[open]>stack::after {
-        background: var(--arrowpanel-background) !important;
+        background-image: var(--noise-urlbar-personal) !important;
+        background-color: var(--arrowpanel-background, #50505090) !important;
         padding-inline: 0px 6px !important;
         padding-block: 7px 4px !important;
         min-height: 20px !important;
