--- a/chrome/components/one_arrowpanel.css
+++ b/chrome/components/one_arrowpanel.css
@@ -1,7 +1,7 @@
 /* Source file made available under Mozilla Public License v. 2.0 See the main repository for updates as well as full license text. 
    https://github.com/Godiesc/firefox-one */
 
-/* Borde gradiente menús desplegables */
+/* Borde menús desplegables */
 
 slot {
     --panel-shadow-margin: 2px !important;
@@ -50,18 +50,38 @@ addon-install-confirmation-notification {
     margin-inline: 1px !important;
 }
 
-/* Color fondo gradiente :hover por los diferentes items de menús principales */
+/* Color fondo :hover por los diferentes items de menús principales */
 
-.protections-popup-category:not(#appMenu-popup toolbarbutton):hover, .protections-popup-footer-button:not(#appMenu-popup toolbarbutton):hover, #protections-popup-show-report-stack:not(#appMenu-popup toolbarbutton):hover > .protections-popup-footer-button:not(#appMenu-popup toolbarbutton), panelview .toolbarbutton-1:not([disabled], [open]:not(#appMenu-popup toolbarbutton)):is(:hover), toolbarbutton.subviewbutton:not([disabled], [open], .subviewbutton-back):is(:hover), .navigable.subviewbutton:not([disabled], [open]):is(:hover), menu.subviewbutton:not([disabled])[_moz-menuhover], menuitem.subviewbutton:not([disabled])[_moz-menuhover], .widget-overflow-list .toolbarbutton-1:not([disabled], [open]):is(:hover), .toolbaritem-combined-buttons:is(:not([cui-areatype="toolbar"]), [overflowedItem="true"]) > toolbarbutton:not([disabled], [open]):is(:hover) {
+.protections-popup-category:not(#appMenu-popup toolbarbutton, [disabled]):hover, 
+.protections-popup-footer-button:not(#appMenu-popup toolbarbutton):hover, 
+#protections-popup-show-report-stack:not(#appMenu-popup toolbarbutton):hover > .protections-popup-footer-button:not(#appMenu-popup toolbarbutton), 
+panelview .toolbarbutton-1:not([disabled], [open]:not(#appMenu-popup toolbarbutton)):is(:hover), 
+toolbarbutton.subviewbutton:not([disabled], [open], .subviewbutton-back):is(:hover), 
+.navigable.subviewbutton:not([disabled], [open]):is(:hover), 
+menu.subviewbutton:not([disabled])[_moz-menuhover], 
+menuitem.subviewbutton:not([disabled])[_moz-menuhover], 
+.widget-overflow-list .toolbarbutton-1:not([disabled], [open]):is(:hover), 
+.toolbaritem-combined-buttons:is(:not([cui-areatype="toolbar"]), 
+[overflowedItem="true"]) > toolbarbutton:not([disabled], [open]):is(:hover) {
     background: var(--button-active-bgcolor) !important;
-    color: #ffffff !important;
-    fill: #ffffff !important;
+    color: white !important;
+    fill: white !important;
 }
 
 /* Color fondo clic por los diferentes items de menús principales */
 
-.protections-popup-category:active, .protections-popup-footer-button:active, #protections-popup-show-report-stack:active > .protections-popup-footer-button, panelview .toolbarbutton-1:not([disabled]):is(:active, [open]), toolbarbutton.subviewbutton:not([disabled], .subviewbutton-back):is(:active, [open]), .navigable.subviewbutton:not([disabled]):is(:active, [open]), menu.subviewbutton:not([disabled])[_moz-menuactive], .panel-banner-item:hover, menuitem.subviewbutton:not([disabled])[_moz-menuactive], .widget-overflow-list .toolbarbutton-1:not([disabled]):is(:active, [open]), .toolbaritem-combined-buttons:is(:not([cui-areatype="toolbar"]), [overflowedItem="true"]) > toolbarbutton:not([disabled]):is(:active, [open]) {
+.protections-popup-category:active, .protections-popup-footer-button:active, 
+#protections-popup-show-report-stack:active > .protections-popup-footer-button, 
+panelview .toolbarbutton-1:not([disabled]):is(:active, [open]), toolbarbutton.subviewbutton:not([disabled], 
+.subviewbutton-back):is(:active, [open]), .navigable.subviewbutton:not([disabled]):is(:active, [open]), 
+menu.subviewbutton:not([disabled])[_moz-menuactive], .panel-banner-item:hover, 
+menuitem.subviewbutton:not([disabled])[_moz-menuactive], 
+.widget-overflow-list .toolbarbutton-1:not([disabled]):is(:active, [open]), 
+.toolbaritem-combined-buttons:is(:not([cui-areatype="toolbar"]), 
+[overflowedItem="true"]) > toolbarbutton:not([disabled]):is(:active, [open]) {
     background: var(--button-hover-bgcolor) !important;
+    color: white !important;
+    fill: white !important;
 }
 
 /* Colores en items deshabilitados*/
@@ -98,7 +118,8 @@ toolbarseparator {
 
 /* Márgenes protección antirastreo */
 
-#protections-popup-blocking-section-header, #protections-popup-not-blocking-section-header, #protections-popup-not-found-section-header, #protections-popup-tp-switch-section, .protections-popup-category, .protections-popup-footer-button {
+#protections-popup-blocking-section-header, #protections-popup-not-blocking-section-header, #protections-popup-not-found-section-header, 
+#protections-popup-tp-switch-section, .protections-popup-category, .protections-popup-footer-button {
     padding-left: 16px !important;
     padding-right: 16px !important;
 }
@@ -203,7 +224,6 @@ toolbar .text-link:-moz-lwtheme:hover, panel .text-link:-moz-lwtheme:hover {
 
 treechildren::-moz-tree-separator {
     border-bottom: none !important;
-    border-image: var(--panel-separator-zap-gradient4) 1 !important;
 }
 
 /* menú desplegable boton de la toolbar que muestra todos los marcadores */
@@ -230,6 +250,7 @@ treechildren::-moz-tree-separator {
 
 .panel-header > .subviewbutton-back:hover {
     background: var(--button-active-bgcolor) !important;
+    color: white !important;
 }
 
 .panel-header > .subviewbutton-back:active {
