--- a/chrome/components/one_root-personal.css
+++ b/chrome/components/one_root-personal.css
@@ -52,23 +52,19 @@
    
   --personal-blur: blur(8px) ;                                                               /* Utilizado para personalizar newtab page */
 }
-  
+
+@media (prefers-color-scheme: dark){
 :root{
-  /*-----------------------------------Gradientes------------------------------------*/
-  --gradient: var(--general-color) !important;                                     
-  --panel-separator-zap-gradient1: linear-gradient(to left, var(--general-color) , #ff000000) !important;
-  --panel-separator-zap-gradient2: linear-gradient(to right, color-mix(in srgb, var(--general-color) 80%, var(--toolbar-bgcolor, Field)) 82% , transparent 96%) !important;
-  --panel-separator-zap-gradient3: linear-gradient(to left, var(--general-color) 90.7%, transparent 90.7%) !important;
-  --panel-separator-zap-gradient4: linear-gradient(to left, var(--general-color) , transparent) !important;
-  --panel-separator-zap-gradient5: linear-gradient(to left, var(--button-bgcolor-personal) 36%, var(--arrowpanel-background) 100%) !important;
+  /*------------------------------Botones :hover, clic--------------------------------*/
+  --button-bgcolor: color-mix(in srgb, var(--general-color) 40%, transparent) !important;             /* Color de buttons */
+  --button-hover-bgcolor: color-mix(in srgb, var(--general-color) 55%, transparent) !important;       /* Color :hover en menuitems */
+  --button-active-bgcolor: color-mix(in srgb, var(--general-color) 75%, transparent) !important;      /* color clic en menuitems*/
+  }}
 
-  /*------------------------------Botones hover, clic--------------------------------*/
-  --button-bgcolor-personal: color-mix(in srgb, var(--general-color) 22%, transparent) !important;    /*Color usado en el botón menú*/
-  --button-bgcolor: color-mix(in srgb, var(--general-color) 40%, transparent) !important;             /*Color de buttons*/
-  --button-hover-bgcolor: color-mix(in srgb, var(--general-color) 55%, transparent) !important;       /*Color fondo de menuitems :hover*/
-  --button-active-bgcolor: color-mix(in srgb, var(--general-color) 75%, transparent) !important;      /*color clic en menuitems*/
-  }
-
-@media (-moz-platform: linux ){:root{
-  --panel-separator-zap-gradient2: linear-gradient(to right, color-mix(in srgb, var(--general-color) 80%, var(--toolbar-bgcolor, Field)) 92% , transparent 100%) !important;
+@media (prefers-color-scheme: light){
+:root{
+  /*------------------------------Botones :hover, clic--------------------------------*/
+  --button-bgcolor: color-mix(in srgb, var(--general-color) 65%, transparent) !important;             /* Color de buttons */
+  --button-hover-bgcolor: color-mix(in srgb, var(--general-color) 80%, transparent) !important;       /* Color :hover en menuitems */
+  --button-active-bgcolor: color-mix(in srgb, var(--general-color) 95%, transparent) !important;      /* color clic en menuitems*/
   }}
